--- a/templates/indexLayout.html
+++ b/templates/indexLayout.html
@@ -40,7 +40,8 @@
         
         <script src="{{ url_for('static', filename='js/lazysizes.min.js') }}" async=""></script>
 
-
+        <script src="https://www.googleoptimize.com/optimize.js?id=OPT-MM62FVC" defer></script>
+        
         <title>dcyphr | {% block title %}{% endblock %}</title>
 
     </head>
