--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,7 +23,7 @@
         <script>
           $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
         </script>
-        
+        <script src="https://www.googleoptimize.com/optimize.js?id=OPT-MM62FVC" defer></script>
 
         <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" defer>
 
