--- a/templates/about.html
+++ b/templates/about.html
@@ -5,87 +5,53 @@
 {% block main %}
 <div class="main">
     <div class="container">
-        <h1 class="my-5 text-left" style="font-family:Lato; font-weight:600">About <span style="color: #017bff">dcyphr</span></h1>
-
-<!--<br>-->
-<!--<div class="container">-->
-<!--    <div class="row">-->
-<!--        <div class="col-sm">-->
-<!--            <h3><font color="#017bff"><b><a href="/browse/0">Read</a></b></font> or <font color="#017bff"><b><a href="/">find</a></b></font> an article</h3>-->
-<!--<p align="left">Use the search bar in the navigation panel or on the homepage to search our database of summaries. Or go to browse to peruse what we have.-->
-<!--If you don't see the article, that means it hasn't been summarized yet.</p>-->
-
-<!--        </div>-->
-<!--        <div class="col-sm">-->
-<!--            <h3 id="request"><font color="#017bff"><b><a href="/request">Request</a></b></font> an article</h3>-->
-<!--<p align="left">If the article you want summarized is not available yet, go to the requests tab and input the relevant information about the article-->
-<!--for it to be summarized.</p>-->
-<!--        </div>-->
-<!--        </div>-->
-
-<!--<div class="row">-->
-<!--    <div class="col">-->
-<!--        <h3 id="contribute"><font color="#017bff"><b><a href="/tasks">Summarize</a></b></font> or <font color="#017bff"><b>edit</b></font> an article</h3>-->
-<!--<p align="left">If you have read an article and wish to contribute a summary, just log in to your account and go to the contribute tab and click on the relevant task.-->
-<!--If it hasn't been requested, you can <font color="#017bff"><a href="/request">request</a></font> it first under requests and then accept the task on the contribute page.</p>-->
-<!--<p align="left">If you notice an inaccuracy or inconsistency in one of the summaries that you are reading, just click the edit button-->
-<!--to fix the mistake and refine the summary. You can also earn points through summarizing and editing!</p>-->
-<!--<p align="left">Other reasons to contribute and edit summaries are to test yourself to see how well you know the information because-->
-<!--if you can't explain it simply, then you don't know it well enough! Also, your contributions will benefit future readers-->
-<!--and have a large impact on scientific accessibility.</p>-->
-<!--    </div>-->
-<!--    <div class="col">-->
-<!--        <h3><font color="#017bff"><b>Navigating</b></font> the site</h3>-->
-<!--        <p align="left">Navigation bar at the top of each page will take you to the main pages. The dcyphr logo will take-->
-<!--        you back to the home page. Once you login, you will have access to the profile page and contribute page. The homepage-->
-<!--        and navigation bar have a search tool. The homepage also has the leaderboard and mission statement. Enjoy dcyphr!</p>-->
-<!--    </div>-->
-<!--</div>-->
-<!--    </div>-->
-
-<p style="font-family: Lato; font-size: 3vh" class="py-3 mb-0">What's your role in the <span style="color: #017bff">dcyphr</span> network?</p>
-    <picture class="w-100">
-        <source type="image/webp" srcset="{{ url_for('static', filename='pages/dcyphrnet.webp') }}">
-        <img class="w-100 pb-5 mb-5 border-bottom" src="{{ url_for('static', filename='pages/dcyphrnet.png') }}" alt="">
-    </picture>
-
-<div class="border-bottom w-100">
-<p style="font-family: Lato; font-size: 3vh" class="pb-1 mb-0">News about <span style="color: #017bff">dcyphr</span>.</p>
-    <div id="retainable-rss-embed"
-        data-rss="https://medium.com/feed/@jeffreyma"
-        data-maxcols="3"
-        data-layout="slider"
-        data-poststyle="external"
-        data-readmore="Read"
-        data-buttonclass="btn btn-outline-primary border20 btn-block mt-2"
-        data-offset="-100">
+        <div class="col-md-8 mx-auto border border20 my-5 p-5 text-left lato" style="box-shadow:5px 5px 20px ">
+            <h2>Our founding mission</h2>
+            <h3>Overview</h3>
+            <div>
+                Research discoveries should be accessible to everyone. Science is a process that serves the public and is nurtured by collective
+                brainpower. However, this is not made possible in the status quo due to <br>
+                <ol>
+                    <li>Paywall - We understand that academic journals charge money to support their publishing and gold-standard peer reviewing. 
+                        The literal ideas and discoveries produced by research are public knowledge and should be freely available. 
+                        The premium charged by journals is outdated and does not go back to science and inhibits the free flow of ideas necessary for innovation.
+                        <span class="blue">dcyphr</span> makes it free for the average person to engage with research discoveries.
+                    </li><br>
+                    <li>Jargon - Decoding academic research articles into a readable form requires time and labor. This process of decoding 
+                        can either happen once on the writer’s side or N times for N readers on the reader’s side. The status quo opts for the 
+                        latter -- in doing so, choosing an O(N) solution over an O(1) solution. <span class="blue">dcyphr</span> takes advantage of the Internet to 
+                        cultivate a platform for the O(1) solution.</li>
+                </ol>
+                The three-pronged consequence of this inefficiency (and why you should help) is <br><br>
+                <ol>
+                    <li>The public disengages from science and research because it is inaccessible, 
+                        contributing to widespread scientific misinformation (highlighted by the COVID-19 pandemic).</li><br>
+                    <li>
+                        Students, especially from under-resourced backgrounds, are deterred from breaking into STEM.
+                    </li><br>
+                    <li>
+                        Researchers spend a large amount of time sifting through literature that could instead be spent making discoveries.
+                        Also, researchers become hyperspecialized which stifles the interdisciplinary efforts where discoveries in research area A 
+                        may unlock a whole set of potentials in research area B. 
+                    </li>
+                </ol>
+                dcyphr aims to solve this by establishing by creating a platform and community for sharing distillations of academic 
+                research. <br><br>
+                <h3>How it works</h3>
+                <ol>
+                    <li>Users curate the platform by requesting research that they wish to see distilled.</li><br>
+                    <li>Our NLP model (currently in development) generates an automatic distillation for the user.</li><br>
+                    <li>The model output is pruned by human distillers to be published on the website and to reinforce the model.</li><br>
+                </ol> <br>
+                <picture class="w-100">
+                    <source type="image/webp" srcset="{{ url_for('static', filename='pages/dcyphrnet.webp') }}">
+                    <img class="w-100 pb-5" src="{{ url_for('static', filename='pages/dcyphrnet.png') }}" alt="">
+                </picture>
+                Join us! <a href="https://bit.ly/30Co0P9" target="_blank" class="blue">Slack</a>
+                | <a href="https://mailchi.mp/a424ac90b061/subscribebytes" target="_blank" class="blue">Newsletter</a> | <a href="https://medium.com/@jeffreyma" target="_blank" class="blue">Medium</a> | <a href="https://www.instagram.com/d.cyphr/" target="_blank" class="blue">Instagram</a>
+            </div>
+        </div>
     </div>
-    <br>
-</div>
-
-<!-- Begin Mailchimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
-	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-<div id="mc_embed_signup">
-<form action="https://dcyphr.us8.list-manage.com/subscribe/post?u=1c38534c3ddafced299e23a1c&amp;id=52012213fb" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	<p style="font-family: Lato; font-size:3vh" class="py-4">Get <span style="color: #017bff">bite-sized science</span> in your inbox!</p>
-	<input type="email" value="" name="EMAIL" class="border20 form-control w-50" id="mce-EMAIL" placeholder="email address" required>
-    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1c38534c3ddafced299e23a1c_52012213fb" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-outline-primary border20"></div>
-    </div>
-</form>
-</div>
-
-<!--End mc_embed_signup-->
-
-    <script src="https://www.retainable.io/assets/retainable/rss-embed/retainable-rss-embed.js"></script>
-</div>
 </div>
 
 {% endblock %}
