--- a/templates/index.html
+++ b/templates/index.html
@@ -97,7 +97,7 @@
                     Maximize productivity
                 </div>
                 <p style="font-family: Lato; font-weight: 300; font-size: 1.3em;">
-                    Researchers like yourself spend at least 11 hours reading articles each week. <span style="color: #017bff">dcyphr</span> uses psycholinguistics and cutting-edge AI to generate research distillations that save you time and resources.
+                    Researchers like yourself spend at least 11 hours reading articles each week. <span style="color: #017bff">dcyphr</span> uses psycholinguistics and cutting-edge AI to generate research distillations that save you time and resources. <a href="/regsiter" style="color:#017bff">Register for free</a> to start requesting and contributing research distillations!
                 </p>
                 <ul class="list-group">
                     <li class="list-group-item border-0"><span class="fa fa-rocket" style="color: #017bff"></span> &nbsp; Up to 83% time reduction</li>
@@ -127,7 +127,7 @@
                 <div class="col my-auto">
                     <picture>
                         <source type="image/webp" data-srcset="{{ url_for('static', filename='landing/ow.webp') }}">
-                        <img class="lazyload" ata-src="{{ url_for('static', filename='landing/ow.png') }}" alt="">
+                        <img class="lazyload" data-src="{{ url_for('static', filename='landing/ow.png') }}" alt="">
                 </picture>
                 </div>
                 <div class="col"></div>
