--- a/templates/method_summary.html
+++ b/templates/method_summary.html
@@ -5,34 +5,41 @@
 {% endblock %}
 
 {% block main %}
-
+<script src="https://cdn.tiny.cloud/1/0alr4b654wmjwk41jr9eeu0xprprdf4mv7veduzfoc3c9rjw/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+<script>
+    tinymce.init({
+      selector: '#summary',
+      menubar: '',
+      plugins: 'code, link',
+      default_link_target: "_blank",
+      link_quicklink: true,
+      toolbar: 'undo redo | styleselect removeformat | bold italic underline | alignleft aligncenter alignright alignjustify | outdent indent | link | code'
+    });
+</script>
 <div class="container my-3 p-4 text-left">
-    <div class="mb-2 pl-3 " style="color: DodgerBlue; font-size: 2.8em">{{ methods[0]["name"] }}
-    {% if x %}
-    <button data-toggle="collapse" class="btn btn-outline-primary border20" data-target="#update"><i class="fa fa-pencil border-0"></i> Edit</button>
-    {% else %}
-    <button data-toggle="collapse" class="btn btn-outline-primary border20" data-target="#update" disabled><i class="fa fa-pencil border-0"></i> Edit</button>
-    {% endif %}
-    </div>
-    <div class="mt-3 pl-4" style="font-size: 1.5em">
-        {{ methods[0]["description"] }}
-    </div>
+    <div class="col-md-8 mx-auto mt-5 pb-0 mb-0">
+        <a href="/method/0" class="blue">&lsaquo; All terms</a>
+        <div class="border border20 mt-3 p-5 text-left lato" style="box-shadow:5px 5px 20px ">
+            <h3 class="blue">{{ methods[0]["name"] }}
+            {% if x %}
+            <button data-toggle="collapse" class="btn btn-outline-primary border20" data-target="#update"><i class="fa fa-pencil border-0"></i> Edit</button>
+            {% else %}
+            <button data-toggle="collapse" class="btn btn-outline-primary border20" data-target="#update" disabled><i class="fa fa-pencil border-0"></i> Edit</button>
+            {% endif %} </h3>
+            <div>
+                {{ methods[0]["description"] }}
+            </div>
 
-    <form action="/methodupdate/{{ methods[0]['id'] }}" id="update" method="POST" class="collapse">
-        <div class="row p-3">
-        <textarea name="summary" id="summary" class="border20 p-2 w-100" rows="10">{{ methods[0]['description'] }}</textarea>
+            <form action="/methodupdate/{{ methods[0]['id'] }}" id="update" method="POST" class="collapse mx-auto">
+                <div class="row p-3">
+                <textarea name="summary" id="summary">{{ methods[0]['description'] }}</textarea>
+                </div>
+                <div class="row">
+                <button type="submit" class="btn btn-outline-primary border20 btn-block">Update</button>
+                </div>
+            </form>
         </div>
-        <div class="row">
-        <button type="submit" class="btn btn-outline-primary border20 btn-block">Update</button>
-        </div>
-    </form>
+    </div>
 </div>
-
-<!--<br>-->
-<!--<h1 style="text-align: left">{{ methods[0]["name"] }}</h1>-->
-<!--<br>-->
-<!--<p class="pl-4 text-weight-light" style="line-height: 40px; font-size: 20px;">-->
-<!--{{ methods[0]["description"] }}-->
-<!--</p>-->
 
 {% endblock %}
