patched comment align bug and added underlining to landing links

--- a/templates/index.html
+++ b/templates/index.html
@@ -146,9 +146,9 @@
         <div class="text-center d-block mx-auto pt-5">
             <div style="font-family: Lato; font-size: 3.0em; font-weight:300;" class="pt-5 pb-3" id="for_people">dcyphr is for people</div>
             <div style="font-family: Lato; font-weight: 300; font-size: 1.3em;" class="col-lg-5 mx-auto">
-                <p><a href="https://staff.aub.edu.lb/~lmeho/meho-physics-world.pdf" target="_blank">50%</a> of published research goes unread.
-                <a href="https://thejournal.com/articles/2016/11/17/many-high-school-graduates-want-to-pursue-stem-careers-but-are-unprepared-for-stem-college-courses.aspx" target="_blank">74%</a> of high school graduates are not prepared to take undergraduate STEM classes.
-                <a href="https://www.pnas.org/content/116/16/7662" target="_blank">84%</a> of Americans think there is a problem with scientific communication.</p>
+                <p><a href="https://staff.aub.edu.lb/~lmeho/meho-physics-world.pdf" target="_blank" style="text-decoration: underline">50%</a> of published research goes unread.
+                <a href="https://thejournal.com/articles/2016/11/17/many-high-school-graduates-want-to-pursue-stem-careers-but-are-unprepared-for-stem-college-courses.aspx" target="_blank" style="text-decoration: underline">74%</a> of high school graduates are not prepared to take undergraduate STEM classes.
+                <a href="https://www.pnas.org/content/116/16/7662" target="_blank" style="text-decoration: underline">84%</a> of Americans think there is a problem with scientific communication.</p>
             </div>
         </div>
         <div class="row pt-5 mt-5" style="font-family: Lato;">
