--- a/templates/profile.html
+++ b/templates/profile.html
@@ -35,13 +35,36 @@
                 <div class="h-25">
                 </div>
 
-                <div class="h-50" style="color: DodgerBlue">
+                <div class="h-50 blue">
                     <p>{{ points }} points</p>
                     <p>{{ length }} articles dcyphr-d</p>
                 </div>
+                {% if coffee %}
+                <style>.bmc-button img{height: 34px !important;width: 35px !important;margin-bottom: 1px !important;box-shadow: none !important;border: none !important;vertical-align: middle !important;}.bmc-button{padding: 7px 15px 7px 10px !important;line-height: 35px !important;height:51px !important;text-decoration: none !important;display:inline-flex !important;color:#ffffff !important;background-color:#FF813F !important;border-radius: 8px !important;border: 1px solid transparent !important;font-size: 24px !important;letter-spacing: 0.6px !important;box-shadow: 0px 1px 2px rgba(190, 190, 190, 0.5) !important;-webkit-box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;margin: 0 auto !important;font-family:'Cookie', cursive !important;-webkit-box-sizing: border-box !important;box-sizing: border-box !important;}.bmc-button:hover, .bmc-button:active, .bmc-button:focus {-webkit-box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;text-decoration: none !important;box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;opacity: 0.85 !important;color:#ffffff !important;}</style><link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet"><a class="bmc-button" target="_blank" href="{{ coffee }}"><img src="https://cdn.buymeacoffee.com/buttons/bmc-new-btn-logo.svg" alt="Buy me a coffee"><span style="margin-left:5px;font-size:24px !important;">Buy me a coffee</span></a>
+                {% else %}
+                <a href="#" id="coffee" style="text-decoration: none; color:#FF813F">Add Buy Me a Coffee</a>
+                {% endif %}
             </div>
         </div>
-
+        <div class="modal fade" tabindex="-1" role="dialog" id="coffeeModal">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" style="color:#017bff">Let others show you their appreciation! &#9749;</h5>
+                </div>
+                <form action="/_coffee/{{ user_id }}" method="POST">
+                    <div class="modal-body">
+                        <p>If you have a link for Buy Me a Coffee, please enter it below.</p>
+                        <input name="coffeeLink" type="text" class="form-control w-75" placeholder="https://www.buymeacoffee.com/galileogalilei">
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-outline-primary" type="submit">Add Button</button>
+                        <a class="btn btn-outline-secondary" target="_blank" href="https://www.buymeacoffee.com">Don't have a link?</a>
+                    </div>
+                </form>
+              </div>
+            </div>
+        </div>
         <div class="row" style="min-height: 75%">
             <div class="my-5 mx-auto p-4 col-xl-10 col-12 border border-dark border20 text-left alternate" style="max-height: 50vh; overflow-y: auto;">
                 <h4 class="mt-0 border-bottom" style="font-family:Georgia"><strong>Contributions</strong></h4>
@@ -98,4 +121,11 @@
         </div>
     </div>
 </div>
+<script type="text/javascript">
+    $(function (){
+        $("#coffee").bind('click', function(){
+            $('#coffeeModal').modal('toggle')
+        });
+    });
+    </script>
 {% endblock %}
