buy me a coffee

--- a/templates/indexLayout.html
+++ b/templates/indexLayout.html
@@ -132,8 +132,8 @@
   <!-- Footer Elements -->
 
   <!-- Copyright -->
-  <div id="footer-content" class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="https://www.dcyphr.org" style="color:white" target="_blank"> www.dcyphr.org </a>
+  <div id="footer-content" class="text-center py-3 lato">© 2020 Copyright:
+    <a href="https://www.dcyphr.org" style="color:white" target="_blank"> dcyphr, Inc. </a>
   </div>
   <!-- Copyright -->
 </footer>
