--- a/templates/profile.html
+++ b/templates/profile.html
@@ -65,13 +65,23 @@
               </div>
             </div>
         </div>
+        <div class="mt-5">
+            {% for pin in pinned %}
+            <div class="border col-sm-4 lato text-left p-3">
+                <a href="/read/{{ pin['id'] }}" class="blue">{{ pin['article'] }}</a><br>
+                <small>Pinned by {{ info[0]['first'] }}</small>
+            </div>
+            {% endfor %}
+        </div>
         <div class="row" style="min-height: 75%">
             <div class="my-5 mx-auto p-4 col-xl-10 col-12 border border-dark border20 text-left alternate" style="max-height: 50vh; overflow-y: auto;">
-                <h4 class="mt-0 border-bottom" style="font-family:Georgia"><strong>Contributions</strong></h4>
+                <h4 class="mt-0 border-bottom" style="font-family:Georgia"><strong>All Contributions</strong></h4>
                 {% for i in range(length) %}
                 <div class="w-100 py-1 border-bottom pl-2">
-                    {% if articles[i]["approved"] == 1 %}
+                    {% if articles[i]["pinned"] == 1 %}
                     <a class="disabledButton my-4" href="/read/{{ articles[i]['id'] }}" align="rights">{{ articles[i]["article"] }}</a><br>
+                    {% elif articles[i]["approved"] == 1 %}
+                    <a class="disabledButton my-4" href="/read/{{ articles[i]['id'] }}" align="rights">{{ articles[i]["article"] }}</a> <a href="/_pin/{{ articles[i]['id'] }}/{{ user_id }}" class="float-right">&#128204;</a><br>
                     {% else %}
                     <div class="disabledButton my-4" align="rights">{{ articles[i]["article"] }} <i>Pending...</i></div><br>
                     {% endif %}
