--- a/templates/public.html
+++ b/templates/public.html
@@ -37,10 +37,17 @@
                 {% endif %}
             </div>
         </div>
-
+        <div class="mt-5 mx-5">
+            {% for pin in pinned %}
+            <div class="border col-sm-4 lato text-left p-3">
+                <a href="/read/{{ pin['id'] }}" class="blue">{{ pin['article'] }}</a><br>
+                <small>Pinned by {{ info[0]['first'] }}</small>
+            </div>
+            {% endfor %}
+        </div>
         <div class="row" style="min-height: 75%">
             <div class="m-5 p-4 col border border-dark text-left border20 alternate" style="max-height: 50vh; overflow-y: auto; font-weight:400;">
-                <h4 class="mt-0 border-bottom" style="font-family: Georgia"><strong>Contributions</strong></h4>
+                <h4 class="mt-0 border-bottom" style="font-family: Georgia"><strong>All Contributions</strong></h4>
                 {% for i in range(length) %}
                 <div class="w-100 py-1 border-bottom pl-2">
                     {% if articles[i]["approved"] == 1 %}
