--- a/templates/index.html
+++ b/templates/index.html
@@ -97,7 +97,7 @@
                     Maximize productivity
                 </div>
                 <p style="font-family: Lato; font-weight: 300; font-size: 1.3em;">
-                    Researchers like yourself spend at least 11 hours reading articles each week. <span style="color: #017bff">dcyphr</span> uses psycholinguistics and cutting-edge AI to generate research distillations that save you time and resources. <a href="/regsiter" style="color:#017bff">Register for free</a> to start requesting and contributing research distillations!
+                    Researchers like yourself spend at least 11 hours reading articles each week. <span style="color: #017bff">dcyphr</span> uses psycholinguistics and cutting-edge AI to generate research distillations that save you time and resources. <a href="/register" style="color:#017bff">Register for free</a> to start requesting and contributing research distillations!
                 </p>
                 <ul class="list-group">
                     <li class="list-group-item border-0"><span class="fa fa-rocket" style="color: #017bff"></span> &nbsp; Up to 83% time reduction</li>
