--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,7 +26,10 @@
         <script src="https://www.googleoptimize.com/optimize.js?id=OPT-MM62FVC" defer></script>
 
         <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" defer>
-
+        <script type="text/javascript" defer>
+          window.heap=window.heap||[],heap.load=function(e,t){window.heap.appid=e,window.heap.config=t=t||{};var r=document.createElement("script");r.type="text/javascript",r.async=!0,r.src="https://cdn.heapanalytics.com/js/heap-"+e+".js";var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(r,a);for(var n=function(e){return function(){heap.push([e].concat(Array.prototype.slice.call(arguments,0)))}},p=["addEventProperties","addUserProperties","clearEventProperties","identify","resetIdentity","removeEventProperty","setEventProperties","track","unsetEventProperty"],o=0;o<p.length;o++)heap[p[o]]=n(p[o])};
+          heap.load("616625878");
+        </script>
         <div id="preloader">
             <div id="status" class="text-center">
                 <img style="margin-top: 20vh" src="{{ url_for('static', filename='logos/dna.svg') }}" alt="Loading...">
