--- a/templates/index.html
+++ b/templates/index.html
@@ -128,7 +128,7 @@
          <div class="col-md-6">
             <div class="text-left index_div_1" style="font-family: Lato; font-weight: 300; padding-top: 15%; padding-bottom: 15%;">
                 <div class="mb-2" style="font-size: 3.0em">
-                    <strong>Maximize productivity</strong>
+                    <strong>Maximize Productivity</strong>
                 </div>
                 <p style="font-family: Lato; font-weight: 300; font-size: 1.3em;">
                     dcyphr provides an open platform that allows people to browse, request, 
